Update navbar graphics

--- a/assets.html
+++ b/assets.html
@@ -53,7 +53,7 @@
     <h1>Boards / Containers</h1>
 
     <!-- Header Board -->
-    <div class="head-board"><h1>Heading Text</h1></div>
+    <div class="head-board"><h1>heading</h1></div>
 
     <!-- Large Board 1x1 -->
     <div class="lrg-board-sq">
