--- a/home.html
+++ b/home.html
@@ -39,24 +39,24 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-
-    <header id="navbar">
+      <!-- Navbar -->
+      <header id="navbar">
         <nav id="nav-links">
-            <a href="home.html" id="home" class="nav-button"><img src="./assets/elements/home.svg"></a>
-            <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/elements/to-do-list.svg"></a>
-            <a href="groups-home.html" id="groups" class="nav-button"><img src="./assets/elements/groups.svg"></a>
-            <a href="my-bag.html" id="bag" class="nav-button"><img src="./assets/elements/bag.svg"></a>
-            <a href="settings.html" id="settings" class="nav-button"><img src="./assets/elements/settings.svg"></a>
+          <a href="user-profile.html" id="home" class="nav-button"><img src="./assets/SVG/user-home.svg"></a>
+          <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/SVG/to-do-list.svg"></a>
+          <a href="groups-home.html" id="groups" class="nav-button"><img src="./assets/SVG/groups.svg"></a>
+          <a href="my-awards.html" id="bag" class="nav-button"><img src="./assets/SVG/awards.svg"></a>
+          <a href="settings.html" id="settings" class="nav-button"><img src="./assets/SVG/settings.svg"></a>
         </nav>
-    </header>
-
-    <!-- Main Content -->
-    <main id="main-page">
-        <div id="main-content">
-          <a href="about-us.html" id="about-us-btn">
-            <button id="info"></button>
-          </a>
+      </header>
+  
+      <!-- Main Content -->
+      <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+  
+        <!-- Info Button -->
+        <a href="about-us.html" id="about-us-btn">
+          <button id="info"></button>
+        </a>
         <a href="index.html"><button id="logout-btn" class="sm-btn">Log Out</button></a>
 
           <div id="welcome">
