--- a/assets.html
+++ b/assets.html
@@ -23,6 +23,7 @@
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/assets.css">
+  <link rel="stylesheet" href="./styles/responsive.css">
 
 </head>
 <body>
@@ -33,32 +34,60 @@
     <a href="">
       <button class="confirm-btn"></button>
     </a>
-
-    <!-- Confirm Button -->
+    
+    <!-- Cancel Button -->
     <a href="">
       <button class="cancel-btn"></button>
     </a>
-    
-    <!-- Square Button Blank -->
+
+    <!-- Logout Button -->
     <a href="">
-      <button class="sq-btn"><img src="/assets/imgs/ico.svg"></button>
+      <button class="logout-btn"></button>
     </a>
 
-    <!-- Button Small -->
-    <button id="" class="sm-btn">Button Text</button>
+    <!-- Continue Button -->
+    <a href="">
+      <button class="continue-btn"></button>
+    </a>
 
-    <!-- Button Medium -->
-    <button id="" class="md-btn">Button Text</button>
+    <!-- Go Back Button -->
+    <a href="">
+      <button class="back-btn"></button>
+    </a>
 
-    <h1>Boards / Containers</h1>
+    <br />
 
-    <!-- Header Board -->
-    <div class="head-board"><h1>heading</h1></div>
+    <!-- Regular Button -->
+    <a href="">
+      <button class="reg-btn">Button Text</button>
+    </a>
 
-    <!-- Large Board 1x1 -->
-    <div class="lrg-board-sq">
-      <h4>Heading Text</h4>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto porro, id ducimus accusamus a, earum quas et eos quidem cum consequuntur sed molestiae iste enim maxime, sit itaque expedita ad?</p>
+    <br />
+
+    <!-- Green Button -->
+    <a href="">
+      <button class="green-btn">Button Text</button>
+    </a>
+
+    <br />
+
+    <!-- Red Button -->
+    <a href="">
+      <button class="red-btn">Button Text</button>
+    </a>
+
+    <br />
+
+    <!-- Grey Button -->
+    <a href="">
+      <button class="grey-btn">Button Text</button>
+    </a>
+
+    <br />
+
+    <h1>Option Menu</h1>
+    <div id="" class="option-menu">
+
     </div>
 
 
