--- a/group-menu.html
+++ b/group-menu.html
@@ -23,6 +23,7 @@
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/assets.css">
+  <link rel="stylesheet" href="./styles/responsive.css">
 
 </head>
 
