--- a/main.html
+++ b/main.html
@@ -47,8 +47,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/assets.css" />
+  <!-- Link to styles of your own -->
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/assets.css">
+  <link rel="stylesheet" href="./styles/responsive.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Custom background styling */
