Updating assets.html

--- a/assets.html
+++ b/assets.html
@@ -83,12 +83,29 @@
       <button class="grey-btn">Button Text</button>
     </a>
 
-    <br />
+    <br /><br />
 
     <h1>Option Menu</h1>
     <div id="" class="option-menu">
+      <h2 class="option-menu-head">Heading</h2>
+      <div class="option-menu-btns">
+        <a href="">
+          <button class="option-btn">Option #1</button>
+        </a>
 
+        <a href="">
+          <button class="option-btn">Option #2</button>
+        </a>
+
+        <a href="">
+          <button class="option-btn-active">Option #3</button>
+        </a>
+      </div>
     </div>
+
+    <br /><br />
+
+    
 
 
 </body>
