Updating assets.html

--- a/assets.html
+++ b/assets.html
@@ -98,14 +98,30 @@
         </a>
 
         <a href="">
-          <button class="option-btn-active">Option #3</button>
+          <button class="option-btn">Option #3</button>
+        </a>
+
+        <a href="">
+          <button class="option-btn-active">Option #4</button>
         </a>
       </div>
     </div>
 
     <br /><br />
 
-    
+    <h1>Message/Warning Popup</h1>
+    <div id="" class="msg-popup">
+      <div class="msg-close">
+        <button class="msg-popup-close"></button>
+      </div>
+      <h2 class="msg-popup-head">Heading</h2>
+      <p class="msg-popup-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum laborum earum odio quae ex, sapiente, alias quod soluta, fugit similique dolorem illo enim iste temporibus aliquam at fugiat ullam hic!</p>
+      <div class="msg-popup-buttons">
+        <button id="" class="msg-popup-btn">Accept</button>
+        <button id="" class="msg-popup-btn">Decline</button>
+      </div>
+    </div>
+
 
 
 </body>
