Styled logout button on pages

--- a/home.html
+++ b/home.html
@@ -54,18 +54,20 @@
       <!-- Main Content -->
       <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
   
-        <!-- Info Button -->
+        <!-- Top Buttons -->
         <a href="about-us.html" id="about-us-btn">
           <button id="info"></button>
         </a>
-        <a href="index.html"><button id="logout-btn" class="sm-btn">Log Out</button></a>
-
-          <div id="welcome">
-            <h1>BCITBuddy</h1>
-          </div>
-          <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
+        <a id="logout-btn">
+          <button class="logout-btn" onclick="logout()"></button>
+        </a>
+        
+        <div id="welcome">
+          <h1>BCITBuddy</h1>
         </div>
-    </main>
+        <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
+      </div>
+  </main>
 
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
