--- a/base-page-template.html
+++ b/base-page-template.html
@@ -39,13 +39,16 @@
       </nav>
     </header>
 
-    <!-- Main Content -->
-    <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
-
-      <!-- Info Button -->
-      <a href="about-us.html" id="about-us-btn">
-        <button id="info"></button>
-      </a>
+      <!-- Main Content -->
+      <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+  
+        <!-- Top Buttons -->
+        <a href="about-us.html" id="about-us-btn">
+          <button id="info"></button>
+        </a>
+        <a id="logout-btn">
+          <button class="logout-btn" onclick="logout()"></button>
+        </a>
 
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
