--- a/group-menu.html
+++ b/group-menu.html
@@ -42,11 +42,13 @@
       <!-- Main Content -->
       <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
   
-        <!-- Info Button -->
+        <!-- Top Buttons -->
         <a href="about-us.html" id="about-us-btn">
           <button id="info"></button>
         </a>
-        <a id="logout-btn"><button class="sm-btn" onclick="logout()">Log Out</button> </a>
+        <a id="logout-btn">
+          <button class="logout-btn" onclick="logout()"></button>
+        </a>
 
         <div class="group-title">
           <h1>Group Menu</h1>
