--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <img id="bear-buddy" src="./assets/animals/bear-stand.svg">
           <a href="login.html">
-            <button id="home-login" class="md-btn"> User Login</button>
+            <button id="home-login" class="reg-btn">User Login</button>
           </a>
         </div>
     </main>
