add functionality for back btn

--- a/group-single-task.html
+++ b/group-single-task.html
@@ -61,7 +61,7 @@
         <a href="about-us.html" id="about-us-btn">
           <button id="info"></button>
         </a>
-        <a id="back-btn">
+        <a id="back-btn" href="main.html">
           <button class="back-btn">  </button>
         </a>
 
