--- a/group-single-task.html
+++ b/group-single-task.html
@@ -65,11 +65,39 @@
           <button class="back-btn">  </button>
         </a>
 
-      <div class="task-info">
+      <!-- <div class="">
         <h2 id="task-display"></h2>
         <div id="duedate-display"></div>
         <div id="description-display"></div>
-      </div>
+      </div> -->
+
+      <div class="task-info">
+        <h1>Task </h1>
+        <form>
+            <fieldset class="mb-3" id="taskInfoFields" disabled>
+                <div class="form-group">
+                    <label>Task</label>
+                    <input type="text" id="task-display" class="form-control" placeholder="Enter task name">
+                </div>
+                <div class="form-group">
+                    <label>Due date</label>
+                    <input type="text" id="duedate-display" class="form-control" placeholder="Enter due date">
+                </div>
+                <div class="form-group">
+                    <label>Description</label>
+                    <input type="text" id="description-display" class="form-control" placeholder="Enter description">
+                </div>
+            </fieldset>
+            <div class="d-flex justify-content-end mt-5">
+                <button type="button" class="btn btn-secondary" onclick="editTaskInfo()">Edit</button>
+                <span style="width: 10px"></span>
+                <button type="button" class="btn btn-info" onclick="saveTaskInfo()">Save</button>
+            </div>
+        </form>
+    </div>
+
+
+
     </div>
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
