--- a/group-single-task.html
+++ b/group-single-task.html
@@ -11,10 +11,15 @@
   <!-- Bootstrap Library CSS CDN go here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
+
+
   <!-- Boostrap Library JS CDN  go here -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
     <!------------------------------------------->
     <!-- Firebase 8 Library and other libraries -->
@@ -81,8 +86,8 @@
                 </div>
                 <div class="form-group">
                     <label>Due date</label>
-                    <input type="text" id="duedate-display" class="form-control" placeholder="Enter due date">
-                </div>
+                    <input type="date" id="duedate-display" >
+                </div>       
                 <div class="form-group">
                     <label>Description</label>
                     <input type="text" id="description-display" class="form-control" placeholder="Enter description">
