Updating assets & login page

--- a/group-single-task.html
+++ b/group-single-task.html
@@ -77,11 +77,11 @@
       </div> -->
 
       <div class="task-info">
-        <h1>Task </h1>
+        <h1>Create Task</h1>
         <form>
             <fieldset class="mb-3" id="taskInfoFields" disabled>
                 <div class="form-group">
-                    <label>Task</label>
+                    <label id="task-heading">Task</label>
                     <input type="text" id="task-display" class="form-control" placeholder="Enter task name">
                 </div>
                 <div class="form-group">
