--- a/login.html
+++ b/login.html
@@ -70,12 +70,24 @@
       </nav>
     </header>
 
-    <!-- the body of your page goes here -->
-    <div class="container">
-      <h1>Let's Login!</h1>
-    </div>
-    <div id="firebaseui-auth-container"></div>
-    <div id="loader">Loading...</div>
+    <!-- Main Content -->
+    <main id="login-page" class="bg-container"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+  
+      <!-- Top Buttons -->
+      <a href="about-us.html" id="about-us-btn">
+        <button id="info"></button>
+      </a>
+
+    <!---------------------------->
+    <!-- ADD PAGE CONTENT BELOW -->
+    <!---------------------------->
+    <div class="main-content">
+      <div id="login-box">
+        <h1>Let's Login!</h1>
+        <div id="loader">Loading...</div>
+        <div id="firebaseui-auth-container"></div>
+      </div>
+    </main>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
