making it pretty

--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
       class="flex flex-col items-center justify-center container-fluid bg-light text-dark p-10 bg-custom"
     >
       <div class="container bg-light p-5">
-        <h1 class="display-4">
+        <h1 class="display-4" id="user-greeting">
           Good morning, <span id="name-goes-here"></span>
         </h1>
         <hr />
