--- a/settings.html
+++ b/settings.html
@@ -33,19 +33,22 @@
       <nav id="nav-links">
         <a href="user-profile.html" id="home" class="nav-button"><img src="./assets/SVG/user-home.svg"></a>
         <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/SVG/to-do-list.svg"></a>
-        <a href="groups-home.html" id="groups" class="nav-button"><img src="./assets/SVG/groups.svg"></a>
+        <a href="groups.html" id="groups" class="nav-button"><img src="./assets/SVG/groups.svg"></a>
         <a href="my-awards.html" id="bag" class="nav-button"><img src="./assets/SVG/awards.svg"></a>
         <a href="settings.html" id="settings" class="nav-button"><img src="./assets/SVG/settings.svg"></a>
       </nav>
     </header>
 
-    <!-- Main Content -->
-    <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
-
-      <!-- Info Button -->
-      <a href="about-us.html" id="about-us-btn">
-        <button id="info"></button>
-      </a>
+      <!-- Main Content -->
+      <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+  
+        <!-- Top Buttons -->
+        <a href="about-us.html" id="about-us-btn">
+          <button id="info"></button>
+        </a>
+        <a id="logout-btn">
+          <button class="logout-btn" onclick="logout()"></button>
+        </a>
 
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
