--- a/base-page-template.html
+++ b/base-page-template.html
@@ -33,7 +33,7 @@
       <nav id="nav-links">
         <a href="user-profile.html" id="home" class="nav-button"><img src="./assets/SVG/user-home.svg"></a>
         <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/SVG/to-do-list.svg"></a>
-        <a href="groups-home.html" id="groups" class="nav-button"><img src="./assets/SVG/groups.svg"></a>
+        <a href="groups.html" id="groups" class="nav-button"><img src="./assets/SVG/groups.svg"></a>
         <a href="my-awards.html" id="bag" class="nav-button"><img src="./assets/SVG/awards.svg"></a>
         <a href="settings.html" id="settings" class="nav-button"><img src="./assets/SVG/settings.svg"></a>
       </nav>
