--- a/groups.html
+++ b/groups.html
@@ -72,18 +72,33 @@
     <!-- Navbar -->
     <header id="navbar">
       <nav id="nav-links">
-        <a href="user-profile.html" id="home" class="nav-button"><img src="./assets/SVG/user-home.svg"></a>
-        <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/SVG/to-do-list.svg"></a>
-        <a href="groups.html" id="groups" class="nav-button"><img src="./assets/SVG/groups.svg"></a>
-        <a href="my-awards.html" id="bag" class="nav-button"><img src="./assets/SVG/awards.svg"></a>
-        <a href="settings.html" id="settings" class="nav-button"><img src="./assets/SVG/settings.svg"></a>
+        <a href="user-profile.html">
+          <div id="user-profile-btn" class="nav-btn" alt=""></div>
+        </a>
+        <a href="to-do-list.html">
+          <div id="to-do-list-btn" class="nav-btn" alt=""></div>
+        </a>
+        <a href="groups.html">
+          <div id="groups-btn" class="nav-btn" alt=""></div>
+        </a>
+        <a href="my-awards.html">
+          <div id="my-awards-btn" class="nav-btn" alt=""></div>
+        </a>
+        <a href="settings.html">
+          <div id="settings-btn" class="nav-btn" alt=""></div>
+        </a>
       </nav>
     </header>
 
     <!-- Main content section with custom background -->
+    <!-- Top Buttons -->
+    <a href="about-us.html">
+      <div id="about-us-btn" class="nav-btn" alt=""></div>
+    </a>
+    <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
+
     <div
-      class="flex flex-col items-center justify-center container-fluid bg-light text-dark p-10 bg-custom"
-    >
+      class="flex flex-col items-center justify-center container-fluid bg-light text-dark p-10 bg-custom">
       <div class="container">
         <h1 id="user-greeting">
           Good morning, <span id="name-goes-here"></span>
