--- a/settings.html
+++ b/settings.html
@@ -28,27 +28,35 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <header id="navbar">
-      <nav id="nav-links">
-        <a href="user-profile.html" id="home" class="nav-button"><img src="./assets/SVG/user-home.svg"></a>
-        <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/SVG/to-do-list.svg"></a>
-        <a href="groups.html" id="groups" class="nav-button"><img src="./assets/SVG/groups.svg"></a>
-        <a href="my-awards.html" id="bag" class="nav-button"><img src="./assets/SVG/awards.svg"></a>
-        <a href="settings.html" id="settings" class="nav-button"><img src="./assets/SVG/settings.svg"></a>
-      </nav>
-    </header>
+  <!-- Navbar -->
+  <header id="navbar">
+    <nav id="nav-links">
+      <a href="user-profile.html">
+        <div id="user-profile-btn" class="nav-btn" alt=""></div>
+      </a>
+      <a href="to-do-list.html">
+        <div id="to-do-list-btn" class="nav-btn" alt=""></div>
+      </a>
+      <a href="groups.html">
+        <div id="groups-btn" class="nav-btn" alt=""></div>
+      </a>
+      <a href="my-awards.html">
+        <div id="my-awards-btn" class="nav-btn" alt=""></div>
+      </a>
+      <a href="settings.html">
+        <div id="settings-btn" class="nav-btn" alt=""></div>
+      </a>
+    </nav>
+  </header>
 
-      <!-- Main Content -->
-      <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
-  
-        <!-- Top Buttons -->
-        <a href="about-us.html" id="about-us-btn">
-          <button id="info"></button>
-        </a>
-        <a id="logout-btn">
-          <button class="logout-btn" onclick="logout()"></button>
-        </a>
+    <!-- Main Content -->
+    <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+
+      <!-- Top Buttons -->
+      <a href="about-us.html">
+        <div id="about-us-btn" class="nav-btn" alt=""></div>
+      </a>
+      <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
 
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
