--- a/groups.html
+++ b/groups.html
@@ -150,14 +150,14 @@
   </div>
 
   <!-- Chat Container -->
-  <div id="chat-container" class="bg-[#f5E3a9] shadow-md rounded-lg w-full max-w-md flex flex-col h-[70vh] border-white">
+  <div id="chat-container" class="shadow-md w-full max-w-md flex flex-col">
     <!-- Chat Display Area -->
     <div id="chat-display" class="flex-grow p-4 overflow-y-auto border">
       <!-- Messages will be appended here -->
     </div>
 
     <!-- Chat Input Area -->
-    <div class="p-4 border-t flex">
+    <div id="chat-input-area" class="p-4 border-t flex">
       <form id="chat-form" class="flex space-x-2">
         <input
           type="text"
