--- a/groups.html
+++ b/groups.html
@@ -96,8 +96,8 @@
       <div class="main-content">
         <h1 id="user-greeting"> Good morning, <span id="name-goes-here"></span></h1>
         
-        <div id="task-list" class="">
-          <h2 class="">Tasks</h2>
+        <div id="task-list">
+          <h2 class="task-list-title">Tasks</h2>
           <!-- Tasks will be dynamically inserted here -->
         </div>
 
