--- a/settings.html
+++ b/settings.html
@@ -20,6 +20,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/rkb7vro.css">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+
   <!-- Link to styles of your own -->
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/assets.css">
@@ -49,20 +57,63 @@
     </nav>
   </header>
 
-    <!-- Main Content -->
-    <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+  <!-- Main Content -->
+  <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
 
-      <!-- Top Buttons -->
-      <a href="about-us.html">
-        <div id="about-us-btn" class="nav-btn" alt=""></div>
-      </a>
-      <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
+    <!-- Top Buttons -->
+    <div class="container mt-5">
+      <h2>Settings Form</h2>
+      <form>
+        <div class="row mb-3">
+          <label for="username" class="col-sm-2 col-form-label">Username</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="username" placeholder="Enter username">
+          </div>
+        </div>
 
-      <!---------------------------->
-      <!-- ADD PAGE CONTENT BELOW -->
-      <!---------------------------->
-      
-    </main>
+        <div class="row mb-3">
+          <label for="email" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="email" placeholder="Enter email">
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label for="BCIT-buddy" class="col-sm-2 col-form-label">BCIT Buddy</label>
+          <div class="col-sm-10">
+            <input class="form-control" id="BCITbuddy" placeholder="Enter Buddy">
+          </div>
+        </div>
+
+
+        <h2>Volume Control</h2>
+        <div class="d-flex align-items-center">
+          <label for="volume" class="form-label me-3">SFX</label>
+          <input type="range" class="form-range" id="volume" min="0" max="100" step="1" value="50"
+            oninput="updateSFXValue(this.value)">
+          <input id="SFXValue" class="ms-3" placeholder="Enter volume">
+        </div>
+
+        <div class="d-flex align-items-center">
+          <label for="volume" class="form-label me-3">Music</label>
+          <input type="range" class="form-range" id="volume" min="0" max="100" step="1" value="50"
+            oninput="updateMusicValue(this.value)">
+          <input id="MusicValue" class="ms-3" placeholder="Enter volume">
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-sm-10 offset-sm-2">
+            <button type="submit" class="btn btn-primary" onclick="saveUserInfo()">Save Settings</button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <!---------------------------->
+    <!-- ADD PAGE CONTENT BELOW -->
+    <!---------------------------->
+
+  </main>
 
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
@@ -70,6 +121,8 @@
 
   <!-- Link to scripts of your own -->
   <script src="./scripts/script.js"></script>
+  <script src="./scripts/firebase_API.js"></script>
+  <script src="./scripts/settings.js"></script>
 </body>
 
 </html>
