--- a/user-profile.html
+++ b/user-profile.html
@@ -68,7 +68,8 @@
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
       <!---------------------------->
-      
+      <nav id="footerPlaceholder"></nav>
+
     </main>
 
   <!---------------------------------------------->
@@ -78,6 +79,7 @@
   <!-- Link to scripts of your own -->
   <script src="./scripts/script.js"></script>
   <script src="./scripts/firebase_API.js"></script>
+  <script src="./scripts/skeleton.js"></script>
 </body>
 
 </html>
