--- a/text/footer.html
+++ b/text/footer.html
@@ -1,10 +1,30 @@
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <p class="col-md-4 mb-0 text-muted">&copy; 2024 BCIT COMP1800 Creations</p>
-    <a href="/"
-        class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32">
-                <use xlink:href="#bootstrap" />
-            </svg>
-    </a>
-</footer>
+<footer class="bg-dark text-white mt-5">
+    <div class="container py-4 ">
+      <div class="row justify-content-center align-items-center text-center text-md-left">
+        <!-- Column 2 -->
+        <div class="col-md-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white">Home</a></li>
+            <li><a href="#" class="text-white">Services</a></li>
+            <li><a href="#" class="text-white">About</a></li>
+            <li><a href="#" class="text-white">Contact</a></li>
+          </ul>
+        </div>
+        <!-- Column 3 -->
+        <div class="col-md-4">
+          <h5>Contact Us</h5>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white">Email Us</a></li>
+            <li><a href="#" class="text-white">Support</a></li>
+            <li><a href="#" class="text-white">FAQ</a></li>
+            <li><a href="#" class="text-white">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="text-center mt-3">
+        <p>&copy; 1800_202410_DTC07. All Rights Reserved.</p>
+      </div>
+    </div>
+  </footer>
