--- a/view-task.html
+++ b/view-task.html
@@ -12,29 +12,27 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+    rel="stylesheet">
 
 
   <!-- Boostrap Library JS CDN  go here -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
-    <!------------------------------------------->
-    <!-- Firebase 8 Library and other libraries -->
-    <!------------------------------------------->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css"
-    />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <!------------------------------------------->
+  <!-- Firebase 8 Library and other libraries -->
+  <!------------------------------------------->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
   <!-- Other libraries go here -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -48,61 +46,61 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <header id="navbar">
-      <nav id="nav-links">
-        <a href="home.html" id="home" class="nav-button"><img src="./assets/SVG/user-home.svg"></a>
-        <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/SVG/to-do-list.svg"></a>
-        <a href="groups-home.html" id="groups" class="nav-button"><img src="./assets/SVG/groups.svg"></a>
-        <a href="my-awards.html" id="bag" class="nav-button"><img src="./assets/SVG/awards.svg"></a>
-        <a href="settings.html" id="settings" class="nav-button"><img src="./assets/SVG/settings.svg"></a>
-      </nav>
-    </header>
+  <!-- Navbar -->
+  <header id="navbar">
+    <nav id="nav-links">
+      <a href="home.html" id="home" class="nav-button"><img src="./assets/SVG/user-home.svg"></a>
+      <a href="to-do-list.html" id="my-list" class="nav-button"><img src="./assets/SVG/to-do-list.svg"></a>
+      <a href="groups-home.html" id="groups" class="nav-button"><img src="./assets/SVG/groups.svg"></a>
+      <a href="my-awards.html" id="bag" class="nav-button"><img src="./assets/SVG/awards.svg"></a>
+      <a href="settings.html" id="settings" class="nav-button"><img src="./assets/SVG/settings.svg"></a>
+    </nav>
+  </header>
 
-      <!-- Main Content -->
-    <main id="task-frame"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
-      <div id="main-content">
-        <!-- Top Buttons -->
-        <a href="about-us.html" id="about-us-btn">
-          <button id="info"></button>
-        </a>
-        <a id="back-btn" href="groups.html">
-          <button class="back-btn">  </button>
-        </a>
+  <!-- Main Content -->
+  <main id="task-frame"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+    <div id="main-content">
+      <!-- Top Buttons -->
+      <a href="about-us.html" id="about-us-btn">
+        <button id="info"></button>
+      </a>
+      <a id="back-btn" href="groups.html">
+        <button class="back-btn"> </button>
+      </a>
 
       <div class="task-info">
         <h1>Create Task</h1>
         <form>
-            <fieldset class="mb-3" id="taskInfoFields" disabled>
-                <div class="form-group">
-                    <label id="task-heading">Task</label>
-                    <input type="text" id="task-display" class="form-control" placeholder="Enter task name">
-                </div>
-                <div class="form-group">
-                    <label>Due date</label>
-                    <input type="date" id="duedate-display" >
-                </div>       
-                <div class="form-group">
-                    <label>Description</label>
-                    <input type="text" id="description-display" class="form-control" placeholder="Enter description">
-                </div>
-            </fieldset>
-            <div class="d-flex justify-content-end mt-5">
-                <button type="button" class="btn btn-secondary" onclick="editTaskInfo()">Edit</button>
-                <span style="width: 10px"></span>
-                <button type="button" class="btn btn-info" onclick="saveTaskInfo()">Save</button>
+          <fieldset class="mb-3" id="taskInfoFields" disabled>
+            <div class="form-group">
+              <label id="task-heading">Task</label>
+              <input type="text" id="task-display" class="form-control" placeholder="Enter task name">
             </div>
+            <div class="form-group">
+              <label>Due date</label>
+              <input type="date" id="duedate-display">
+            </div>
+            <div class="form-group">
+              <label>Description</label>
+              <input type="text" id="description-display" class="form-control" placeholder="Enter description">
+            </div>
+          </fieldset>
+          <div class="d-flex justify-content-end mt-5">
+            <button type="button" class="btn btn-secondary" id="edit-btn" onclick="editTaskInfo()">Edit</button>
+            <button type="button" class="btn btn-info" id="cancel-btn" onclick="cancelEdit()">Cancel</button>
+            <button type="button" class="btn btn-info" onclick="saveTaskInfo()">Save</button>
+          </div>
         </form>
-    </div>
+      </div>
 
 
 
     </div>
-      <!---------------------------->
-      <!-- ADD PAGE CONTENT BELOW -->
-      <!---------------------------->
-      
-    </main>
+    <!---------------------------->
+    <!-- ADD PAGE CONTENT BELOW -->
+    <!---------------------------->
+
+  </main>
 
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
@@ -112,7 +110,7 @@
   <script src="./scripts/firebase_API.js"></script>
   <script src="./scripts/script.js"></script>
   <script src="./scripts/group-single-task.js"></script>
-  
+
 </body>
 
 </html>
