--- a/view-task.html
+++ b/view-task.html
@@ -69,7 +69,7 @@
       </a>
 
       <div class="task-info">
-        <h1>Create Task</h1>
+        <h1>Edit Task</h1>
         <form>
           <fieldset class="mb-3" id="taskInfoFields" disabled>
             <div class="form-group">
