add class to form

--- a/view-task.html
+++ b/view-task.html
@@ -68,9 +68,9 @@
         <button class="back-btn"> </button>
       </a>
 
-      <div class="task-info">
+      <div class="task-info ">
         <h1>Edit Task</h1>
-        <form>
+        <form class="form-control-sm">
           <fieldset class="mb-3" id="taskInfoFields" disabled>
             <div class="form-group">
               <label id="task-heading">Task</label>
