Update tasks.js & tasks.html

--- a/tasks.html
+++ b/tasks.html
@@ -68,6 +68,7 @@
           <div id="about-us-btn" class="nav-btn" alt=""></div>
         </a>
         <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
+        <div id="task-container"></div>
 
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
@@ -82,7 +83,7 @@
   <!-- Link to scripts of your own -->
   <script src="./scripts/script.js"></script>
   <script src="./scripts/firebase_API.js"></script>
-  <script src="./scripts/loaded-tasks.js"></script>
+  <script src="./scripts/tasks.js"></script>
 </body>
 
 </html>
