Added Scroll to Chat

--- a/groups.html
+++ b/groups.html
@@ -94,7 +94,7 @@
 
       <!-- Main-Content -->
       <div class="main-content">
-        <h1 id="user-greeting"> Good morning, <span id="name-goes-here"></span></h1>
+        <h1 id="user-greeting"> Group Tasks: Welcome, <span id="name-goes-here"></span></h1>
         
         <div id="task-list">
           <!-- Tasks will be dynamically inserted here -->
