Updating tasks.html

--- a/assets.html
+++ b/assets.html
@@ -30,6 +30,11 @@
   <div id="buttons">
     <h1>Buttons</h1>
 
+    <!-- Add Button -->
+    <a href="">
+      <button class="add-btn"></button>
+    </a>
+
     <!-- Confirm Button -->
     <a href="">
       <button class="confirm-btn"></button>
