--- a/tasks.html
+++ b/tasks.html
@@ -61,14 +61,17 @@
     </header>
 
       <!-- Main Content -->
-      <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+      <main id="prepopulated-tasks" class="bg-container"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
   
         <!-- Top Buttons -->
         <a href="about-us.html">
           <div id="about-us-btn" class="nav-btn" alt=""></div>
         </a>
         <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
-        <div id="task-container"></div>
+        <div id="prepopulated-tasks-content" class="main-content">
+          <div id="task-container"></div>
+        </div>
+
 
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
