--- a/to-do-list.html
+++ b/to-do-list.html
@@ -68,6 +68,14 @@
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
       <!---------------------------->
+      <h1>Personal To-Do List</h1>
+    
+      <ul id="personal-task-list"></ul>
+  
+      <input type="text" id="custom-personal-task-input" placeholder="Enter a new task">
+      <button id="add-personal-task-btn">Add Custom Task</button>
+
+
       <nav id="footerPlaceholder"></nav>
 
     </main>
@@ -80,6 +88,7 @@
   <script src="./scripts/script.js"></script>
   <script src="./scripts/firebase_API.js"></script>
   <script src="./scripts/skeleton.js"></script>
+  <script src="./scripts/personal-task-list.js"></script>
 </body>
 
 </html>
