--- a/my-awards.html
+++ b/my-awards.html
@@ -73,7 +73,60 @@
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
       <!---------------------------->
-      <nav id="footerPlaceholder"></nav>
+      <div class="awards-container">
+        <h1>My Awards</h1>
+        
+        <div class="award-category">
+            <h2>Academics</h2>
+            <div class="award">
+                <img src="icon1.png" alt="Award Icon">
+                <p>Outstanding Assignment</p>
+            </div>
+            <div class="award">
+                <img src="icon2.png" alt="Award Icon">
+                <p>Top Quiz Score</p>
+            </div>
+            <div class="award">
+                <img src="icon3.png" alt="Award Icon">
+                <p>Class Participation Star</p>
+            </div>
+        </div>
+        
+        <div class="award-category">
+            <h2>Personal</h2>
+            <div class="award">
+                <img src="icon4.png" alt="Award Icon">
+                <p>Time Management Pro</p>
+            </div>
+            <div class="award">
+                <img src="icon5.png" alt="Award Icon">
+                <p>Self-Care Champion</p>
+            </div>
+            <div class="award">
+                <img src="icon6.png" alt="Award Icon">
+                <p>Mindfulness Master</p>
+            </div>
+        </div>
+
+        <div class="award-category">
+            <h2>Social</h2>
+            <div class="award">
+                <img src="icon7.png" alt="Award Icon">
+                <p>Community Helper</p>
+            </div>
+            <div class="award">
+                <img src="icon8.png" alt="Award Icon">
+                <p>Team Player</p>
+            </div>
+            <div class="award">
+                <img src="icon9.png" alt="Award Icon">
+                <p>Friendship Builder</p>
+            </div>
+        </div>
+    </div>
+
+
+    <nav id="footerPlaceholder"></nav>
 
     </main>
 
