add more form inputs

--- a/settings.html
+++ b/settings.html
@@ -73,10 +73,28 @@
           <label for="email" class="col-sm-2 col-form-label">Email</label>
           <input type="email" class="form-control" id="email" placeholder="Enter email">
         </div>
+
         <div class="form-group">
-          <label for="BCIT-buddy" class="col-sm-2 col-form-label">BCIT Buddy</label>
-          <input class="form-control" id="BCITbuddy" placeholder="Enter Buddy">
+          <label id="task-heading">Buddy Name</label>
+          <input type="text" id="Buddy-name" class="form-control" placeholder="Enter name">
         </div>
+
+        <div class="form-group">
+          <label id="task-heading">Buddy Personality</label>
+          <input type="text" id="Buddy-personality" class="form-control" placeholder="Enter name">
+        </div>
+
+        <label for="dropdown">Choose an option:</label>
+        <select id="dropdown" name="options">
+          <option value="bear-sit">bear-sit</option>
+          <option value="bear-stand">bear-stand</option>
+          <option value="deer-stand">deer-stand</option>
+          <option value="fox-stand">fox-stand</option>
+          <option value="fox-sit">fox-sit</option>
+          <option value="raccoon-1">raccoon</option>
+          <option value="squirrel">squirrel</option>
+          <option value="wolf">wolf</option>
+        </select>
       </fieldset>
 
       <h2>Volume Control</h2>
