re-update buddy age from merge conflict

--- a/user-profile.html
+++ b/user-profile.html
@@ -80,7 +80,7 @@
           <div class="user-info">
             <p><strong>Username:</strong> <span id="username">User123</span></p>
             <p><strong>Buddyname:</strong> <span id="buddy-name">User123</span></p>
-            <p><strong>Buddy Age:</strong> 12 weeks old</p>
+            <p><strong>Buddy Age:</strong> <span id="buddy-age">0 days old</span></p>
             <p><strong>Buddy Personality:</strong> <span id="buddy-personality">User123</span></p>
             <p><strong>Favourite Class:</strong> COMP1800</p>
           </div>
