User-profile.html

--- a/user-profile.html
+++ b/user-profile.html
@@ -87,10 +87,14 @@
               </div>
               <div class="user-settings-info">
                 <p><strong>Your Name:</strong> <span id="username">User123</span></p>
+                <p><strong>Your Pronouns:</strong> <span id="pronouns">They/Them</span></p>
                 <p><strong>Buddy Name:</strong> <span id="buddy-name">User123</span></p>
                 <p><strong>Buddy Age:</strong> <span id="buddy-age">0 days old</span></p>
                 <p><strong>Buddy Personality:</strong> <span id="buddy-personality">User123</span></p>
                 <p><strong>Favourite Class:</strong> COMP1800</p>
+              </div>
+              <div id="user-friend-code">
+                Your Friend Code:
               </div>
             </div>
           </div>
