add more form features

--- a/settings.html
+++ b/settings.html
@@ -75,6 +75,11 @@
         </div>
 
         <div class="form-group">
+          <label for="email" class="col-sm-2 col-form-label">Prefered Pronouns</label>
+          <input type="email" class="form-control" id="userPronoun" placeholder="Enter email">
+        </div>
+
+        <div class="form-group">
           <label id="task-heading">Buddy Name</label>
           <input type="text" id="Buddy-name" class="form-control" placeholder="Enter name">
         </div>
@@ -84,6 +89,7 @@
           <input type="text" id="Buddy-personality" class="form-control" placeholder="Enter name">
         </div>
 
+        <div class="form-group">
         <label for="dropdown">Choose an option:</label>
         <select id="dropdown" name="options">
           <option value="bear-sit">bear-sit</option>
@@ -95,7 +101,24 @@
           <option value="squirrel">squirrel</option>
           <option value="wolf">wolf</option>
         </select>
-      </fieldset>
+      </div>
+
+        <div class="form-group">
+        <label for="dropdown-class">Choose a class:</label>
+        <select id="dropdownclass" name="options">
+          <option value="COMP 1537">COMP 1537</option>
+          <option value="COMP 1510">COMP 1510</option>
+          <option value="COMP 1113">COMP 1113</option>
+          <option value="COMP 1800">COMP 1800</option>
+          <option value="COMP 1712">COMP 1712</option>
+          <option value="COMM 1116">COMM 1116</option>
+        </select>
+        </div>
+
+
+    </fieldset>
+
+
 
       <h2>Volume Control</h2>
       <div class="d-flex align-items-center">
