Still user-profile.html

--- a/user-profile.html
+++ b/user-profile.html
@@ -77,7 +77,7 @@
         <div id="user-profile-info">
           <div id="user-info">
             <div id="user-card" class="user-card">
-              <h1>User Profile</h1>
+              <h1 class="option-menu-head">User Profile</h1>
               <div id="user-photo-streak">
                 <img src="/assets/animals/bear-stand.svg" alt="User Photo" class="user-photo" id="buddy">
                 <div class="user-summary">
@@ -96,6 +96,9 @@
               <div id="user-friend-code">
                 Your Friend Code:
               </div>
+              <a href="settings.html">
+                <button class="option-btn">Edit Profile</button>
+              </a>
             </div>
           </div>
 
