add display for new data

--- a/user-profile.html
+++ b/user-profile.html
@@ -91,7 +91,7 @@
                 <p><strong>Buddy Name:</strong> <span id="buddy-name">User123</span></p>
                 <p><strong>Buddy Age:</strong> <span id="buddy-age">0 days old</span></p>
                 <p><strong>Buddy Personality:</strong> <span id="buddy-personality">User123</span></p>
-                <p><strong>Favourite Class:</strong> COMP1800</p>
+                <p><strong>Favourite Class:</strong> <span id="favourite-class">COMP1800</span></p>
               </div>
               <div id="user-friend-code">
                 Your Friend Code:
