add buddy display

--- a/settings.html
+++ b/settings.html
@@ -64,7 +64,7 @@
     <div class="container mt-5">
       <h2>Settings Form</h2>
       <div id="avatar-preview">
-        <img src="/assets/animals/bear-stand.svg" alt="User Photo" class="user-photo" id="buddy">
+        <img src="/assets/animals/bear-stand.svg" alt="User Photo" class="user-photo" id="buddy" height="250" width="250">
       </div>
 
       <fieldset class="mb-3" id="userInfoFields" disabled>
