--- a/settings.html
+++ b/settings.html
@@ -126,17 +126,17 @@
 
       <h2>Volume Control</h2>
       <div class="d-flex align-items-center">
-        <label for="volume" class="form-label me-3">SFX</label>
+        <label for="volume" class="form-label me-3">Sound Effects</label>
         <input type="range" class="form-range" id="volume" min="0" max="100" step="1" value="50"
           oninput="updateSFXValue(this.value)">
-        <input id="SFXValue" class="ms-3" placeholder="Enter volume">
+        <input id="SFXValue" class="ms-3" placeholder="50">
       </div>
 
       <div class="d-flex align-items-center">
         <label for="volume" class="form-label me-3">Music</label>
         <input type="range" class="form-range" id="volume" min="0" max="100" step="1" value="50"
           oninput="updateMusicValue(this.value)">
-        <input id="MusicValue" class="ms-3" placeholder="Enter volume">
+        <input id="MusicValue" class="ms-3" placeholder="50">
       </div>
 
       <div class="d-flex justify-content-end mt-5">
