--- a/user-profile.html
+++ b/user-profile.html
@@ -140,17 +140,17 @@
 
         <div id="friends-list">
           <div class="friend-box">
-            <h3>Nick S.</h3>
+            <h3 class="option-menu-head">Nick S.</h3>
             <img class="friend-img" src="/assets/imgs/nick-placeholder.jpg" />
             <p>Pee pee poo poo</p>
           </div>
           <div class="friend-box">
-            <h3>Timmy K.</h3>
+            <h3 class="option-menu-head">Timmy K.</h3>
             <img class="friend-img" src="/assets/imgs/timmy-placeholder.jpg" />
             <p>Pee pee poo poo</p>
           </div>
           <div class="friend-box">
-            <h3>Caley R.</h3>
+            <h3 class="option-menu-head">Caley R.</h3>
             <img class="friend-img" src="/assets/imgs/caley-placeholder.PNG" />
             <p>Pee pee poo poo</p>
           </div>
